# minishell

./: .gitignore  Makefile
.github/workflows/: e2e_test.yml  test.yml
include/: buildin.h  cmd.h  env_val.h  exec.h  history.h  minishell.h  prompt.h
include/builtin/: builtin.h  builtin_exit.h
include/exec/: exec.h  find_path.h  ft_strsignal.h  pipe.h  process.h  redirect.h
include/message/: message.h
include/parser/: expansion.h  heredoc.h  lexer.h  node.h  parser.h  prompt.h  struct_heredoc.h  token.h
include/signal/: signal.h
include/utils/: exit_status.h  minishell_error.h  utils.h
include/variable/: env.h  env_util.h  var.h
libft/: Makefile  ft_calloc.c  ft_ispunct.c  ft_isspace.c  ft_join_words.c  ft_lstadd_back.c  ft_lstadd_front.c  ft_printf.c  ft_puthex_utils.c  ft_putnbr_utils.c  ft_putstr_fd.c  ft_putstr_utils.c  ft_split2.c  ft_strlen.c  ft_strncmp.c  ft_substr.c  get_next_line.c  get_next_line_utils.c  libft.h
src/: main.c  minishell.c
src/builtin/: builtin.c  builtin_cd.c  builtin_echo.c  builtin_env.c  builtin_exit.c  builtin_exit_print.c  builtin_export.c  builtin_pwd.c  builtin_unset.c  builtin_var.c
src/exec/: exec.c  find_path.c  ft_strsignal.c  pipe.c  process.c  process_exec.c  process_wait.c  redirect.c
src/parser/: expansion.c  expansion_join.c  expansion_special.c  expansion_string.c  expansion_utils.c  expansion_variable.c  heredoc.c  heredoc_input.c  heredoc_output.c  heredoc_utils.c  lexer.c  node.c  parser.c  parser_command.c  parser_declare.c  parser_redirect.c  parser_utils.c  prompt.c  token.c
src/paser/: prompt.c
src/signal/: signal.c
src/utils/: minishell_error.c  utils.c
src/variable/: env.c  env_set.c  env_util1.c  env_util2.c  var.c  var_check.c  var_edit.c
test/: syagi.txt  yootsubo.txt  yootsubo3.txt
test/checklist/: 01_prompt.md  02_history.md  03_path.md  04_single_quote.md  05_double_quote.md  06_redirect.md  07_pipe.md  08_env.md  09_signal.md  10_builtin.md  11_parse.md
test/e2e/: run_e2e.sh
test/e2e/case/: builin_env.in  builin_export.in  builtin_cd.in  builtin_echo.in  builtin_env.in  builtin_exit.in  (+21 more)
test/unit/: CMakeLists.txt
test/unit/src/: hello_test.cpp
test/unit/src/libft/: split2.cpp
test/unit/src/parser/: expansion.cpp  expansion_string.cpp  lexer.cpp
test/unit/src/variable/: env.cpp  var.cpp
(+4 files in other folders)
